# voxels-networking

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: doxygen.yml
docs/: CMakeLists.txt  Doxyfile  conf.py  index.rst
docs/manual/: glossary.dox  introduction.dox
examples/: client.cpp  server.cpp
include/voxels/protocols/game/: connection.hpp  connection_dispatcher.hpp  connection_events.hpp  connection_responses.hpp  control_dispatcher.hpp  control_steam.hpp  control_stream_dispatcher.hpp  control_stream_events.hpp  control_stream_responses.hpp  endpoint.hpp  event.hpp  event_dispatcher.hpp  listener.hpp  listener_dispatcher.hpp  listener_events.hpp  listener_responses.hpp  msquic.hpp  protocol.hpp  quic.hpp  response.hpp  stream.hpp  stream_dispatcher.hpp  stream_events.hpp  stream_responses.hpp
schema/game/: common_types.fbs  control_stream.fbs  handshake.fbs  identity.fbs  protocol.fbs
